fixed metricHeaderInfo|| gave consistent spacing

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataAssets/DataAssetsHeader/data-asset-header.less
@@ -24,7 +24,7 @@
     border-radius: 12px;
     border: 0.5px solid @grey-300;
     padding: 20px;
-    gap: 50px;
+    gap: 32px;
     background-color: @background-color;
   }
   .ant-space-item {
@@ -83,6 +83,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 144px;
   }
 
   .ant-btn-group {
@@ -127,5 +128,12 @@
 
   .ant-divider.ant-divider-vertical.vertical-divider {
     height: 50px;
+  }
+  .tier-container,
+  .extra-info-container {
+    width: 144px;
+  }
+  .extra-info-label-heading {
+    max-width: 120px;
   }
 }
