--- a/openmetadata-ui/src/main/resources/ui/src/components/Database/RetentionPeriod/retention-period.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Database/RetentionPeriod/retention-period.less
@@ -20,3 +20,7 @@ span.extra-info-label-heading {
   color: @primary-heading-color;
   font-weight: 500;
 }
+
+.retention-period-container {
+  width: 144px;
+}
