--- a/openmetadata-ui/src/main/resources/ui/src/components/Metric/MetricHeaderInfo/metric-header-info.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Metric/MetricHeaderInfo/metric-header-info.less
@@ -29,3 +29,6 @@
     color: @grey-600;
   }
 }
+.metric-header-info-container {
+  width: 144px;
+}
