--- a/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
@@ -20,5 +20,5 @@
   color: @grey-700;
 }
 .domain-link-container {
-  width: 150px;
+  width: 144px;
 }
