--- a/openmetadata-ui/src/main/resources/ui/src/components/common/OwnerLabel/owner-label.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/OwnerLabel/owner-label.less
@@ -125,3 +125,7 @@
     }
   }
 }
+
+.owner-label-container {
+  width: 144px;
+}
